drm/i915: Don't stall too much for cursor vs. pageflip

- We don't need to wait for the previous commit to have fully
  completed, the waiting for hw_done in swap_state is sufficient.

- We need to make sure that the pure page_flip signals hw_done early
  enough. This is done through a gross hack by recomputing stuff. I
  think it'd be better to fix this by moving things around a bit,
  keeping separate state pointers where needed (e.g. hw verifier) and
  for the wm optimization, by extracting that into a cancellable work
  item.

But legacy cursor vs. legacy page-flip is a very restricted use case,
and we need to make it work meanwhile.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=96593
Cc: Maarten Lankhorst <maarten.lankhorst@linux.intel.com>
Cc: rafael.ristovski@gmail.com
Signed-off-by: Daniel Vetter <daniel.vetter@intel.com>